tests/NormalTests/paczka1/small_fuzzy/34483482.err
Error in line 1: rgIar6L8 S96 0,7
Error in line 4: A965 A814 49,1
Error in line 9: A965 S96 39,7
Error in line 10: A965 A965 2,2
